--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+    <a href="225.html"></a>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <style>
