--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ document.getElementById("a").innerHTML = document.getElementById("a").innerHTML 
 </script>
   </head>
   <body>
-<a href="225.html"></a>
+<a href="225.html">Math Problems</a>
     <h1>Hello Plunker!</h1>
     n=<input type="text" value="0" id="a_znach">
 <br>
