--- a/225.html
+++ b/225.html
@@ -56,4 +56,5 @@ H1 {
   <h1>Задача 1.27</h1>
   Радиус r=<input type="text" value="0" id="c_znach">
   <button onclick="func3()">1.27</button>
+ </body>
  </html>
