--- a/225.html
+++ b/225.html
@@ -50,6 +50,7 @@ H1 {
  </script>
  </head>
  <body>
+  <a href="225.html">Math Problems</a>
   <h1>Задача 1.25</h1>
   Сторона квадрата a=<input type="text" value="0" id="a_znach">
   <button onclick="func1()">1.25</button>
