--- a/225.html
+++ b/225.html
@@ -73,7 +73,7 @@ H1 {
   <button onclick="func4()">1.28</button>
   <div id="k"></div> 
   <h1>Задача 1.29</h1>
-  Объём v , Площадь п <input type="text" value="0" id="n_znach">
+  Длина окружности п <input type="text" value="0" id="n_znach">
   <button onclick="func5()">1.29</button>
   <div id="n"></div> 
  </body>
