--- a/grafhic.html
+++ b/grafhic.html
@@ -83,12 +83,71 @@ x=Number(document.getElementById("x_znach").value);
 y=Number(document.getElementById("y_znach").value); 
 var canvas = document.getElementById('example'); 
 var ctx = canvas.getContext('2d'); 
-if (x <= 1.5 || x >= -1  || y>=-0.5 || y<= 1.5) {
+if (x <= 1.5 && y>=-0.5 && y<=1.5 && x >= -1) {
 document.getElementById("otvet").innerHTML = "Точка в области";
 } else {
 document.getElementById("otvet").innerHTML = "Точка не в области"; 
   }
 }
+
+
+
+function er5(){ 
+x=Number(document.getElementById("x_znach").value); 
+y=Number(document.getElementById("y_znach").value); 
+var canvas = document.getElementById('example'); 
+var ctx = canvas.getContext('2d'); 
+if (x <= 4 && y>= 2 && y<= 4 && x >= 1) {
+document.getElementById("otvet").innerHTML = "Точка в области";
+} else {
+document.getElementById("otvet").innerHTML = "Точка не в области"; 
+  }
+}
+
+
+
+function er6(){ 
+x=Number(document.getElementById("x_znach").value); 
+y=Number(document.getElementById("y_znach").value); 
+var canvas = document.getElementById('example'); 
+var ctx = canvas.getContext('2d'); 
+if (x <= -1 && y>= 1 && x >= 2) {
+document.getElementById("otvet").innerHTML = "Точка в области";
+} else {
+document.getElementById("otvet").innerHTML = "Точка не в области"; 
+  }
+}
+
+
+
+function er7(){ 
+x=Number(document.getElementById("x_znach").value); 
+y=Number(document.getElementById("y_znach").value); 
+var canvas = document.getElementById('example'); 
+var ctx = canvas.getContext('2d'); 
+if (x <= 3 && y>= -3 && y<= 1 && x >= 1) {
+document.getElementById("otvet").innerHTML = "Точка в области";
+} else {
+document.getElementById("otvet").innerHTML = "Точка не в области"; 
+  }
+}
+
+
+
+function er8(){ 
+x=Number(document.getElementById("x_znach").value); 
+y=Number(document.getElementById("y_znach").value); 
+var canvas = document.getElementById('example'); 
+var ctx = canvas.getContext('2d'); 
+if (x <= 2.5 && x >= 1  && y >= -2 && y <= 1.5 || y >= 1.5 && x <= -1 || y >= 1.5 && x >= 2.5 ) {
+document.getElementById("otvet").innerHTML = "Точка в области";
+} else {
+document.getElementById("otvet").innerHTML = "Точка не в области"; 
+  }
+}
+
+
+
 </script> 
 </head> 
 <body> 
