--- a/graphs.html
+++ b/graphs.html
@@ -4,11 +4,62 @@
   <title>Kuzmin Vladimir Theory of graphs</title>
 </head>
 <body>
-&#1058;&#1077;&#1086;&#769;&#1088;&#1080;&#1103; &#1075;&#1088;&#1072;&#769;&#1092;&#1086;&#1074; &mdash; &#1088;&#1072;&#1079;&#1076;&#1077;&#1083; &#1076;&#1080;&#1089;&#1082;&#1088;&#1077;&#1090;&#1085;&#1086;&#1081; &#1084;&#1072;&#1090;&#1077;&#1084;&#1072;&#1090;&#1080;&#1082;&#1080;, &#1080;&#1079;&#1091;&#1095;&#1072;&#1102;&#1097;&#1080;&#1081;
-&#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1075;&#1088;&#1072;&#1092;&#1086;&#1074;. &#1042; &#1086;&#1073;&#1097;&#1077;&#1084; &#1089;&#1084;&#1099;&#1089;&#1083;&#1077; &#1075;&#1088;&#1072;&#1092; &#1087;&#1088;&#1077;&#1076;&#1089;&#1090;&#1072;&#1074;&#1083;&#1103;&#1077;&#1090;&#1089;&#1103; &#1082;&#1072;&#1082; &#1084;&#1085;&#1086;&#1078;&#1077;&#1089;&#1090;&#1074;&#1086;
-&#1074;&#1077;&#1088;&#1096;&#1080;&#1085; (&#1091;&#1079;&#1083;&#1086;&#1074;), &#1089;&#1086;&#1077;&#1076;&#1080;&#1085;&#1105;&#1085;&#1085;&#1099;&#1093; &#1088;&#1105;&#1073;&#1088;&#1072;&#1084;&#1080;. &#1042; &#1089;&#1090;&#1088;&#1086;&#1075;&#1086;&#1084; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080;&#1080; &#1075;&#1088;&#1072;&#1092;&#1086;&#1084;
-&#1085;&#1072;&#1079;&#1099;&#1074;&#1072;&#1077;&#1090;&#1089;&#1103; &#1090;&#1072;&#1082;&#1072;&#1103; &#1087;&#1072;&#1088;&#1072; &#1084;&#1085;&#1086;&#1078;&#1077;&#1089;&#1090;&#1074; , &#1075;&#1076;&#1077; &#1077;&#1089;&#1090;&#1100; &#1087;&#1086;&#1076;&#1084;&#1085;&#1086;&#1078;&#1077;&#1089;&#1090;&#1074;&#1086; &#1083;&#1102;&#1073;&#1086;&#1075;&#1086; &#1089;&#1095;&#1105;&#1090;&#1085;&#1086;&#1075;&#1086;
-&#1084;&#1085;&#1086;&#1078;&#1077;&#1089;&#1090;&#1074;&#1072;, &#1072; &mdash; &#1087;&#1086;&#1076;&#1084;&#1085;&#1086;&#1078;&#1077;&#1089;&#1090;&#1074;&#1086; .<br>
-<img style="width: 716px; height: 443px;" alt="" src="Shot.JPG">
+Тео́рия гра́фов &mdash; раздел дискретной математики, изучающий
+свойства графов. В общем смысле граф представляется как множество
+вершин (узлов), соединённых рёбрами. В строгом определении графом
+называется такая пара множеств , где есть подмножество любого счётного
+множества, а &mdash; подмножество .<br>
+<img style="width: 719px; height: 447px;" alt=""
+ src="file:///C:/Users/VladimirKuzmin/Desktop/Shot0.PNG"><br>
+<br>
+Связный граф &mdash; граф, содержащий ровно одну компоненту
+связности. Это означает, что между любой парой вершин этого графа
+существует как минимум один путь.<br>
+<br>
+<img style="width: 430px; height: 368px;" alt=""
+ src="file:///C:/Users/VladimirKuzmin/Pictures/Shot2.PNG"><br>
+<br>
+Несвязный граф -- граф, содержащий более одной компоненты связности<br>
+<img style="width: 427px; height: 371px;" alt=""
+ src="file:///C:/Users/VladimirKuzmin/Pictures/Shot3.PNG"><br>
+<br>
+Ориентированный граф (кратко орграф) &mdash; (мульти) граф, рёбрам
+которого присвоено направление. Направленные рёбра именуются также
+дугами, а в некоторых источниках и просто рёбрами.<br>
+<img style="width: 465px; height: 376px;" alt=""
+ src="file:///C:/Users/VladimirKuzmin/Pictures/Shot1.PNG"><br>
+<br>
+Граф, ни одному ребру которого не присвоено направление, называется
+неориентированным графом или неорграфом.<br>
+<img style="width: 430px; height: 368px;" alt=""
+ src="file:///C:/Users/VladimirKuzmin/Pictures/Shot2.PNG"><br>
+<br>
+Степень или валентность вершины графа &mdash; количество рёбер
+графа , инцидентных вершине .<br>
+<img style="width: 427px; height: 363px;" alt=""
+ src="file:///C:/Users/VladimirKuzmin/Pictures/Shot4.PNG"><br>
+<br>
+Дерево &mdash; это связный ациклический граф. Связность означает
+наличие путей между любой парой вершин, ацикличность &mdash;
+отсутствие циклов и то, что между парами вершин имеется только по
+одному пути.<br>
+<img style="width: 400px; height: 343px;" alt=""
+ src="file:///C:/Users/VladimirKuzmin/Pictures/Shot5.PNG"><br>
+<br>
+Эйлеров цикл &mdash; эйлеров путь, являющийся циклом, то есть
+замкнутый путь, проходящий через каждое ребро графа ровно по одному
+разу.<br>
+<img style="width: 354px; height: 418px;" alt=""
+ src="../Pictures/Shot6.PNG"><br>
+<br>
+Эйлерова цепь в графе &mdash; это путь, проходящий по всем рёбрам
+графа и притом только по одному разу.<br>
+<br>
+Простой цикл, проходящий через все вершины графа, называется<br>
+гамильтоновым<br>
+<br>
+<br>
+<br>
+<br>
 </body>
 </html>
